@@ -1,3 +1,8 @@
+Mon Feb  4 11:22:15 CET 2002  Robin Ericsson  <lobbin@localhost.nu>
+
+	* src/init.c: More MCCP #ifdef's
+	* src/mccpDecompress.c: Ditto
+
 Mon Feb  4 10:31:36 CET 2002  Robin Ericsson  <lobbin@localhost.nu>
 
 	* ROADMAP: Changed a little.
